# AgentX

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
AgentX/: __init__.py  main.py
AgentX/agent/: __init__.py  context.py  hook.py  loop.py  runner.py
AgentX/bus/: __init__.py  bus.py  messages.py
AgentX/cli/: __init__.py  banner.py  command.py  stream.py
AgentX/config/: __init__.py  loader.py  schema.py
AgentX/mcp/: __init__.py  client.py
AgentX/providers/: __init__.py  base.py  openai_compat_provider.py  registry.py
AgentX/session/: __init__.py  session.py  store.py
AgentX/templates/: SOUL.md
AgentX/tools/: __init__.py  base.py  context.py  registry.py  weather.py  web.py
AgentX/utils/: __init__.py  helpers.py
SaraAgent/agent/: hook.py  runner.py
SaraAgent/bus/: messages.py
SaraAgent/config/: schema.py
SaraAgent/providers/: __init__.py  base.py  openai_compat_provider.py
SaraAgent/tools/: registry.py  weather.py
SaraAgent/utils/: helpers.py
tests/tools/: test_web_search_tool.py
