[project]
name = "agent-sara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "openai>=2.38.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.0.0",
    "rich>=15.0.0",
    "typer>=0.15.0",
]

[project.scripts]
agentx = "AgentX.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["AgentX"]