[project]
name = "agent-sara"
version = "0.1.0"
description = "A modular, production-ready AI agent framework with tool use, streaming, and persistent sessions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "mcp>=1.28.1",
    "openai>=2.38.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.0.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "rich>=15.0.0",
    "typer>=0.15.0",
]

[project.scripts]
agentx = "AgentX.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["AgentX"]
